--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -39,25 +39,25 @@
         <h2>新着商品</h2>
 
         <div class="new_product">
-            <%= image_tag "top_sample1.jpeg" %>
+            <%= image_tag "top_sample1.jpeg", :width=>"100" %>
             <p>商品名</p>
             <p>￥10,000</p>
         </div>
 
         <div class="new_product">
-            <%= image_tag "top_sample2.jpeg" %>
+            <%= image_tag "top_sample2.jpeg", :width=>"100" %>
             <p>商品名</p>
             <p>￥10,000</p>
         </div>
 
         <div class="new_product">
-            <%= image_tag "top_sample3.jpeg" %>
+            <%= image_tag "top_sample3.jpeg", :width=>"100" %>
             <p>商品名</p>
             <p>￥10,000</p>
         </div>
 
         <div class="new_product">
-            <%= image_tag "top_sample4.jpeg" %>
+            <%= image_tag "top_sample4.jpeg", :width=>"100" %>
             <p>商品名</p>
             <p>￥10,000</p>
         </div>
