--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-      <%= render 'layouts/header', customer: current_customer %>
+      <%= render 'layouts/header' %>
     </header>
 
     <main>
