--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
     <% elsif admin_signed_in?  %>
         <ul>
             <li>
-                <%=link_to "商品一覧" , about_path %>
+                <%=link_to "商品一覧" , admin_items_path %>
             </li>
 
             <li>
