--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,3 +1,42 @@
 <h3>商品詳細</h3>
 
-<%= attachment_image_tag @item, :image, 100 %>
+<div class="item">
+    <%= attachment_image_tag @item, :image%>
+
+    <table>
+        <tbody>
+            <tr>
+                <td>商品名</td>
+                <td><%= @item.name %></td>
+            </tr>
+
+            <tr>
+                <td>商品説明</td>
+                <td><%= @item.introduction %></td>
+            </tr>
+
+            <tr>
+                <td>ジャンル</td>
+                <td><%= @item.genre.name %></td>
+            </tr>
+
+            <tr>
+                <td>税込み価格<br>(税込価格)</td>
+                <td><%= @item.price %> (<%= @item_price %>)円</td>
+            </tr>
+
+            <tr>
+                <td>販売ステータス</td>
+                <% if @item.is_active==true %>
+                    <td>販売中</td>
+                <% else %>
+                    <td>販売停止中</td>
+                <% end %>
+            </tr>
+
+        </tbody>
+    </table>
+
+    <%= link_to "編集する", edit_admin_item_path(@item.id) %>
+
+</div>
