--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
             </li>
 
             <li>
-                <%=link_to "商品一覧" , about_path %>
+                <%=link_to "商品一覧" , items_path %>
             </li>
 
             <li>
@@ -50,7 +50,7 @@
             </li>
 
             <li>
-                <%=link_to "商品一覧" , about_path %>
+                <%=link_to "商品一覧" , items_path %>
             </li>
 
             <li>
