--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,28 +1,6 @@
-<h1>Top</h1>
+<%= render 'public/genre_index' %>
 
 <div class="content">
-    <table class="genre">
-        <thead>
-            <tr>
-                <th>ジャンル検索</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            <tr>
-                <td>ケーキ</td>
-            </tr>
-            <tr>
-                <td>焼き菓子</td>
-            </tr>
-            <tr>
-                <td>プリン</td>
-            </tr>
-            <tr>
-                <td>キャンディ</td>
-            </tr>
-        </tbody>
-    </table>
 
     <div class="introduction">
         <%= image_tag "top_tea_party.jpeg" %>
@@ -62,6 +40,6 @@
             <p>￥10,000</p>
         </div>
 
-        <p>全ての商品を見る></p>
+        <%= link_to "全ての商品を見る", items_path %>
     </div>
 </div>
