--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,28 +1,17 @@
-<table class="genre">
-        <thead>
-            <tr>
-                <th>ジャンル検索</th>
-            </tr>
-        </thead>
+<%= render 'public/genre_index' %>
 
-        <tbody>
-            <tr>
-                <td>ケーキ</td>
-            </tr>
-            <tr>
-                <td>焼き菓子</td>
-            </tr>
-            <tr>
-                <td>プリン</td>
-            </tr>
-            <tr>
-                <td>キャンディ</td>
-            </tr>
-        </tbody>
-    </table>
-</table>
 
 <div class="contents">
     <h3>商品一覧</h3>
     <h4>(全<%= Item.count%>件)</h4>
+
+    <div class="items">
+        <% @items.each do |i| %>
+            <div class="item">
+                <%= attachment_image_tag i, :image %>
+                <%= link_to i.name, item_path(i.id) %>
+                ￥<%= i.price %>
+            </div >
+        <% end %>
+    </div>
 </div>
