--- a/app/views/public/end_users/show.html.erb
+++ b/app/views/public/end_users/show.html.erb
@@ -37,7 +37,7 @@
 
 <div class="order">
     <h3>配送先</h3>
-    <%=link_to "一覧を見る", edit_end_user_path(@customer) %>
+    <%=link_to "一覧を見る", end_user_address_index_path(@customer) %>
 </div> 
 <div class="order">
     <h3>注文履歴</h3>
