--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,11 +14,11 @@
             </li>
 
             <li>
-                <%=link_to "カート" , about_path %>
+                <%=link_to "カート" , end_user_cart_items_path(current_customer.id) %>
             </li>
 
             <li>
-                <%=link_to "ログアウト" ,  destroy_customer_session_path, method: :delete %>
+                <%=link_to "ログアウト" ,  destroy_customer_session_path %>
             </li>
         </ul>
     <% elsif admin_signed_in?  %>
@@ -40,7 +40,7 @@
             </li>
 
             <li>
-                <%=link_to "ログアウト" ,  destroy_admin_session_path, method: :delete %>
+                <%=link_to "ログアウト" ,  destroy_admin_session_path %>
             </li>
         </ul>
     <% else %>
