--- a/app/views/public/end_users/show.html.erb
+++ b/app/views/public/end_users/show.html.erb
@@ -41,5 +41,5 @@
 </div> 
 <div class="order">
     <h3>注文履歴</h3>
-    <%=link_to "一覧を見る", edit_end_user_path(@customer) %>
+    <%=link_to "一覧を見る",  end_user_order_items_path(@customer) %>
 </div> 
