--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,7 @@
             </li>
 
             <li>
-                <%=link_to "注文履歴一覧" , about_path %>
+                <%=link_to "注文履歴一覧" , admin_order_items_path %>
             </li>
 
             <li>
